--- a/configs/onlineSettings.json
+++ b/configs/onlineSettings.json
@@ -1,5 +1,8 @@
 {
   "version": "v0.0.1",
   "download_urls": ["https://github.com/1tn1c0/mouse-sensitivity-matcher/releases"],
-  "donate_url": "https://donate.jw.org/ui/F/donate-home.html#/donate"
+  "donate_url": "https://donate.jw.org/ui/F/donate-home.html#/donate",
+  "startup": {
+    "title": "Information"
+  }
 }
