Add Statup Message

--- a/configs/onlineSettings.yaml
+++ b/configs/onlineSettings.yaml
@@ -20,8 +20,8 @@ startup:
       <p align="center">😍</p>
     </div>
     <div className="card border-primary m-3">
-        Nous pouvons mettre beaucoup plus<br></br>
-        d'options. N'hésitez pas a m'offrir un café<br></br>
-        afin que je reste bien réveillé  pour <br></br>
+        Nous pouvons mettre beaucoup plus
+        d'options. N'hésitez pas a m'offrir un café
+        afin que je reste bien réveillé  pour
         développer cette aplication 😊
     </div>
