--- a/configs/onlineSettings.yaml
+++ b/configs/onlineSettings.yaml
@@ -5,6 +5,7 @@ donate_url: https://donate.jw.org/ui/F/donate-home.html#/donate
 startup:
   title: Information
   content: |
+   <div>
     Cette application est entièrement gratuite
     <li>
         Pas de compte
@@ -22,4 +23,5 @@ startup:
     d'options. N'hésitez pas a m'offrir un café
     afin que je reste bien réveillé  pour
     développer cette aplication 😊
+    </div>
     
