--- a/configs/onlineSettings.yaml
+++ b/configs/onlineSettings.yaml
@@ -33,8 +33,8 @@ startup:
           <td>
             <div className="card border-primary m-3">
               Nous pouvons mettre beaucoup plus <br></br>
-              d'options. N'hésitez pas a m'offrir <br></br
-              un café afin que je reste bien réveillé <br></br
+              d'options. N'hésitez pas a m'offrir <br></br>
+              un café afin que je reste bien réveillé <br></br>
               pour développer cette application 😊
             </div>
           </td>
