--- a/configs/onlineSettings.yaml
+++ b/configs/onlineSettings.yaml
@@ -5,7 +5,8 @@ donate_url: https://donate.jw.org/ui/F/donate-home.html#/donate
 startup:
   title: Information
   content: |
-    <div className="card border-primary m-12">
+    <div class="alert alert-dismissible alert-primary">
+      <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
       <legend align="center">Bienvenue !!</legend>
       <table>
             <thead>
